--- a/style/choseChar.css
+++ b/style/choseChar.css
@@ -9,41 +9,42 @@
     22%{color: #0026ff; text-shadow: 0px 0px #0026ff}
     35%{color: #2b204e; text-shadow: none;}
 }
-
 body {
     background-color: #000000;
     background-image: url(../imagens/bgwalpp.jpg);
     background-size: cover;
     background-attachment: fixed;
     background-repeat: no-repeat;
-    margin: auto;
-    color: #2b204e;
-
-
 }
-.positBox{
+
+.caixa {
+    width: 100%;
+    height: 808px;
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: flex-end;
 }
-.arcadeBox{
-    background-color: rgb(0, 0, 0);
+
+.arcadeBox {
     display: flex;
     flex-direction: column;
+    justify-content: flex-start;
+    align-content: center;
     margin-top: 5px;
-    width: 650px;
+    color: white;
+    background-color: #000000;
+    width: 80%;
     height: 97vh;
-    align-items: center;
     border: 8px solid #000d58;
     border-radius: 16px 16px 0px 0px;
 }
-.nomeJogo{
+
+.nomeJogo {
     font-size: 1.4em;
     font-family: monospace;
     background-color: rgb(7, 7, 7);
     margin: 2%;
-    padding: 0 35.3%;
+    text-align: center;
     display: inline-block;
     border: #0026ffdb 8px solid;
     border-radius: 16px;
@@ -56,27 +57,32 @@ body {
     animation-name: teste;
     animation-iteration-count: infinite;
 }
-.creditos{
+.personagens {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    width: 90%;
+    height: 65%;
+    background-color: rgb(91, 0, 107);
+    margin: 0 auto;
+}
+.personagem{
+    width: 90%;
+    height: 70%;
     display: flex;
     flex-direction: row;
-    gap: 100px;
-    color: rgb(0, 0, 0);
-    font-family: monospace;
-    font-weight: bold;
-    height: 170px;
-}
-.placa{
-    display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
-    margin: 40px 10px;
-    background-image: linear-gradient(to right,rgb(81, 81, 81),rgb(201, 201, 201),rgb(81, 81, 81));
-    border-radius: 10px;
-    width: 250px;
-    height: 70px;
-    text-align: center;
+    background-color: rgb(0, 0, 0);
 }
-.pCred{
-    margin: 15px;
-    padding: 20px;
+.persona1,.persona2,.persona3{
+    width: 100px;
+    height: 100px;
+    background-color: aquamarine;
+    font-size: 0%;
+    transition: 0.5s;
+}
+.persona1:hover{
+    font-size: 1em;
 }
