--- a/style/choseChar.css
+++ b/style/choseChar.css
@@ -2,6 +2,11 @@
     margin: 0px;
     padding: 0px;
 }
+@font-face {
+    font-family: 'bits';
+    src: url('../fonts/PressStart2P-Regular.ttf') format('truetype');
+    font-weight: normal;
+}
 @keyframes teste{
     0,100%{color: #0ff}
     12%{color: #0026ff; text-shadow: 0px 0px #0026ff}
@@ -16,7 +21,10 @@ body {
     background-attachment: fixed;
     background-repeat: no-repeat;
 }
-
+a {
+    color: white;
+    text-decoration: none;
+}
 .caixa {
     width: 100%;
     height: 808px;
@@ -66,6 +74,7 @@ body {
     height: 65%;
     background-color: rgb(91, 0, 107);
     margin: 0 auto;
+    font-family: 'bits';
 }
 .personagem{
     width: 90%;
@@ -73,16 +82,40 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    align-items: center;
+    /* align-items: center; */
     background-color: rgb(0, 0, 0);
 }
 .persona1,.persona2,.persona3{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 20px;
     width: 100px;
     height: 100px;
     background-color: aquamarine;
     font-size: 0%;
     transition: 0.5s;
+    text-align: center;
 }
-.persona1:hover{
-    font-size: 1em;
+.persona1 >h3,.persona2 >h3,.persona3 >h3{
+    margin-top: 25px;
+    width: 500px;
+    font-family: 'bits';
+    line-height: 25px;
+}
+.persona1>img{
+    width: 150px;
+    height: 150px;
+}
+.persona3>img{
+    width: 150px;
+    height: 150px;
+}
+.persona1 >img:hover,.persona2 >img:hover,.persona3 >img:hover{
+    transform: scale(1.2);
+    transition: 5;
+}
+.persona1:hover,.persona2:hover,.persona3:hover{
+    font-size: 0.9em;
 }
