--- a/style/index.css
+++ b/style/index.css
@@ -2,6 +2,12 @@
     margin: 0px;
     padding: 0px;
 }
+@font-face {
+    font-family: 'bits';
+    src: url('../fonts/PressStart2P-Regular.ttf') format('truetype');
+    font-weight: normal;
+}
+
 @keyframes teste{
     0,100%{color: #0ff}
     12%{color: #0026ff; text-shadow: 0px 0px #0026ff}
@@ -9,7 +15,9 @@
     22%{color: #0026ff; text-shadow: 0px 0px #0026ff}
     35%{color: #2b204e; text-shadow: none;}
 }
-
+.nomeJogo>h1{
+    font-family: 'bits', cursive;
+}
 body {
     background-color: #000000;
     background-image: url(../imagens/bgwalpp.jpg);
@@ -37,11 +45,12 @@ body {
     border-radius: 16px 16px 0px 0px;
 }
 .nomeJogo{
+    text-align: center;
     font-size: 1.4em;
     font-family: monospace;
     background-color: rgb(7, 7, 7);
     margin: 2%;
-    padding: 0 35.3%;
+    width: 90%;
     display: inline-block;
     border: #0026ffdb 8px solid;
     border-radius: 16px;
