--- a/style/choseChar.css
+++ b/style/choseChar.css
@@ -37,7 +37,7 @@ a {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    align-content: center;
+    align-items: center;
     margin-top: 5px;
     color: white;
     background-color: #000000;
@@ -48,17 +48,19 @@ a {
 }
 
 .nomeJogo {
-    font-size: 1.4em;
-    font-family: monospace;
-    background-color: rgb(7, 7, 7);
-    margin: 2%;
+    font-family: 'bits' ;
     text-align: center;
-    display: inline-block;
+    font-size: 1.4em;
+    background-color: rgb(7, 7, 7);
+    margin: 2% 0;
+    width: 95%;
     border: #0026ffdb 8px solid;
     border-radius: 16px;
     color: #0026ff;
     box-shadow: inset 0 0 20px 0 #0026ff, 0 0 20px 0 #0026ff;
     text-shadow: 0 0 8px hsla(231, 100%, 50%, 0.687), hsla(231, 100%, 50%, 0.984);
+    padding: 8px;
+
 }
 .apaga{
     animation-duration: 8s;
@@ -66,13 +68,14 @@ a {
     animation-iteration-count: infinite;
 }
 .personagens {
+    text-align: center;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
     width: 90%;
     height: 65%;
-    background-color: rgb(91, 0, 107);
+    border: 1px solid blue;
     margin: 0 auto;
     font-family: 'bits';
 }
@@ -93,7 +96,6 @@ a {
     gap: 20px;
     width: 100px;
     height: 100px;
-    background-color: aquamarine;
     font-size: 0%;
     transition: 0.5s;
     text-align: center;
@@ -118,4 +120,11 @@ a {
 }
 .persona1:hover,.persona2:hover,.persona3:hover{
     font-size: 0.9em;
+}
+.controle-wide{
+    width: 100%;
+    
+}
+.controle-wide >img{
+    width: 100%;
 }
