--- a/style/choseChar.css
+++ b/style/choseChar.css
@@ -99,7 +99,9 @@ a {
     font-size: 0%;
     transition: 0.5s;
     text-align: center;
+    cursor: pointer;
 }
+
 .persona1 >h3,.persona2 >h3,.persona3 >h3{
     margin-top: 25px;
     width: 500px;
