--- a/style/index.css
+++ b/style/index.css
@@ -9,7 +9,7 @@
 }
 
 @keyframes teste{
-    0,100%{color: #0ff}
+    --0,100%{color: #0ff}
     12%{color: #0026ff; text-shadow: 0px 0px #0026ff}
     20%{color: #2b204e; text-shadow: none;}
     22%{color: #0026ff; text-shadow: 0px 0px #0026ff}
