--- a/style/arcadeBox.css
+++ b/style/arcadeBox.css
@@ -79,11 +79,13 @@ body{
     margin: auto;
 }
 .btn{
-    padding: 10px;
+    padding: 15px;
     border: #0026ffdb 4px solid;
+    background-color: black;
     border-radius: 16px;
     color: #ffffff;
-    box-shadow: inset 0 0 20px 0 #0026ff, 0 0 20px 0 #0026ff;
+    box-shadow: inset 0 0 10px 0 #0026ff, 0 0 10px 0 #0026ff;
+    cursor: pointer;
 }
 .controL{
     width: 50%;
