--- a/style/choseChar.css
+++ b/style/choseChar.css
@@ -8,7 +8,7 @@
     font-weight: normal;
 }
 @keyframes teste{
-    0,100%{color: #0ff}
+    --0,100%{color: #0ff}
     12%{color: #0026ff; text-shadow: 0px 0px #0026ff}
     20%{color: #2b204e; text-shadow: none;}
     22%{color: #0026ff; text-shadow: 0px 0px #0026ff}
