--- a/style/arcadeBox.css
+++ b/style/arcadeBox.css
@@ -2,22 +2,46 @@
     margin: 0px;
     padding: 0px;
 }
+
 @font-face {
     font-family: 'bits';
     src: url('../fonts/PressStart2P-Regular.ttf') format('truetype');
     font-weight: normal;
 }
-@keyframes teste{
-    --0,100%{color: #0ff}
-    12%{color: #0026ff; text-shadow: 0px 0px #0026ff}
-    20%{color: #2b204e; text-shadow: none;}
-    22%{color: #0026ff; text-shadow: 0px 0px #0026ff}
-    35%{color: #2b204e; text-shadow: none;}
+
+@keyframes teste {
+
+    --0,
+    100% {
+        color: #0ff
+    }
+
+    12% {
+        color: #0026ff;
+        text-shadow: 0px 0px #0026ff
+    }
+
+    20% {
+        color: #2b204e;
+        text-shadow: none;
+    }
+
+    22% {
+        color: #0026ff;
+        text-shadow: 0px 0px #0026ff
+    }
+
+    35% {
+        color: #2b204e;
+        text-shadow: none;
+    }
 }
-body{
+
+body {
     background-color: black;
 }
-.positBox{
+
+.positBox {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -25,7 +49,8 @@ body{
     width: 93%;
     margin: auto;
 }
-.arcadeBox{
+
+.arcadeBox {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -37,7 +62,8 @@ body{
     color: white;
     font-family: 'bits';
 }
-.letreiro{
+
+.letreiro {
     margin: 9px 0;
     border: #0026ffdb 8px solid;
     border-radius: 16px;
@@ -48,12 +74,14 @@ body{
     text-align: center;
     letter-spacing: 7px;
 }
-.apaga{
+
+.apaga {
     animation-duration: 8s;
     animation-name: teste;
     animation-iteration-count: infinite;
 }
-.tela{
+
+.tela {
     text-align: center;
     border: 1px solid blue;
     width: 90%;
@@ -63,13 +91,14 @@ body{
     justify-content: space-around;
     align-items: center;
     line-height: 30px;
-    /* background-image: url(../imagens/bgwalpp.jpg); */
 }
-.texto{
+
+.texto {
     margin: 0 35px;
     font-size: 0.85em;
 }
-.controlImg{
+
+.controlImg {
     height: 100px;
     width: 100%;
     display: flex;
@@ -78,7 +107,8 @@ body{
     background-color: black;
     margin: auto;
 }
-.btn{
+
+.btn {
     padding: 15px;
     border: #0026ffdb 4px solid;
     background-color: black;
@@ -87,7 +117,29 @@ body{
     box-shadow: inset 0 0 10px 0 #0026ff, 0 0 10px 0 #0026ff;
     cursor: pointer;
 }
-.controL{
+
+.controL {
     width: 50%;
     height: 120px;
+}
+
+@media (max-width:1024px) {
+    .texto {
+        font-size: 0.9em;
+        line-height: 22px;
+    }
+}
+
+@media (max-width:768px) {
+    .texto {
+        font-size: 0.7em;
+        line-height: 22px;
+    }
+}
+
+@media (max-width:425px) {
+    .texto {
+        font-size: 0.5em;
+        line-height: 15px;
+    }
 }
