--- a/style/14098.css
+++ b/style/14098.css
@@ -1,5 +1,5 @@
 .tela {
-    background-image: url(../imagens/user2.jpg);
+    background-image: url(../imagens/ralph1.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
