--- a/style/14577.css
+++ b/style/14577.css
@@ -1,5 +1,6 @@
-.tela{
-    background-image: url(../imagens/ralph1.jpg);
+.tela {
+    background-image: url(../imagens/felix1.jpg);
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: center center;
 }
