--- a/style/49975.css
+++ b/style/49975.css
@@ -2,4 +2,5 @@
     background-image: url(../imagens/felix4.jpg);
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: center center;
 }
