--- a/style/18714.css
+++ b/style/18714.css
@@ -1,5 +1,6 @@
-.tela{
+.tela {
     background-image: url(../imagens/user1.jpg);
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: center center;
 }
