--- a/style/34714.css
+++ b/style/34714.css
@@ -2,4 +2,5 @@
     background-image: url(../imagens/user3.jpg);
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: center center;
 }
