--- a/style/39471.css
+++ b/style/39471.css
@@ -2,4 +2,5 @@
     background-image: url(../imagens/felix3.jpg);
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: center center;
 }
