--- a/style/47771.css
+++ b/style/47771.css
@@ -2,4 +2,5 @@
     background-image: url(../imagens/user4.jpg);
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: center center;
 }
