--- a/style/57774.css
+++ b/style/57774.css
@@ -2,4 +2,5 @@
     background-image: url(../imagens/user5.jpg);
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: center center;
 }
