--- a/style/creditos.css
+++ b/style/creditos.css
@@ -22,27 +22,31 @@ h1 {
     font-family: 'bits', monospace;
     margin: 10px;
 }
+
 .creditosBox {
     color: white;
     display: flex;
-    font-family: 'bits',monospace;
+    font-family: 'bits', monospace;
     font-size: 1.2em;
     line-height: 40px;
     margin-top: 30px;
     height: 620px;
     overflow: hidden;
 }
-.transparent{
+
+.transparent {
     color: transparent;
 }
-.creditos{
+
+.creditos {
     margin-top: 450px;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
     margin-right: 30px;
 }
-.creditos1{
+
+.creditos1 {
     margin-top: 450px;
     display: flex;
     flex-direction: column;
@@ -59,20 +63,26 @@ h1 {
     white-space: nowrap;
     overflow: hidden;
 }
-.creditos,.creditos1{
+
+.creditos,
+.creditos1 {
     animation: anim 20s normal both;
 }
+
 .typing-animation {
     animation: blinkCursor 300ms infinite normal, typing 2s steps(80) 1s normal both;
 }
+
 @keyframes anim {
     from {
         margin-top: 490px;
     }
-    to{
+
+    to {
         margin-top: 0px;
     }
 }
+
 @keyframes typing {
     from {
         width: 0;
@@ -92,10 +102,12 @@ h1 {
         border-right-color: transparent;
     }
 }
-.btn{
+
+.btn {
 
     cursor: pointer;
 }
-a{
+
+a {
     color: white;
 }
