--- a/style/choseChar.css
+++ b/style/choseChar.css
@@ -173,12 +173,19 @@ a {
     width: 100%;
 }
 
-@media (max-width:1024px) {
-
-    .persona3:hover,
-    .persona2:hover,
-    .persona1:hover {
-        font-size: 0.6em;
+@media (max-width:425px) {
+    .personagem{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 100px;
+    }
+    .peronsagens{
+        height: 100%;
+    }
+    .perosona1{
+        margin: auto;
         width: 10px;
+        height: 40px;
     }
 }
